# Bayes-O-Matic

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  bayesomatic-3004468b48ab8b34.js  bayesomatic-3004468b48ab8b34_bg.wasm  bayesomatic-8a497ada3a8def18.js  bayesomatic-8a497ada3a8def18_bg.wasm  bayesomatic.js  bayesomatic.wasm  index-e80b5b03d1ccbf79.js  index-e80b5b03d1ccbf79_bg.wasm  index-ea9acfec2409e38d.js  index-ea9acfec2409e38d_bg.wasm  index-f30576f679baf68a.js  index-f30576f679baf68a_bg.wasm  index.html
.github/workflows/: publish.yml
examples/en/: flat_earth.json  insect_bite.json
examples/fr/: pluie.json  terre_plate.json
help/: en.md  fr.md
lang/: en.ftl  fr.ftl
snippets/bayesomatic-46e087e87f45bbef/src/: js_functions.js
src/: draw.rs  editor.rs  graph.rs  graph_render.js  handlers.rs  i18n.rs  js.rs  js_functions.js  main.rs  markdown.rs  model.rs  render.rs  results.rs  ui.rs  utils.rs
static/: help.html  index.html
static/css/: main.css
static/examples/: flat_earth.json  insect_bite.json
static/examples/en/: flat_earth.json  rain.json
static/examples/fr/: morsure_d-insecte.json  terre_plate.json
static/help/: en.md  fr.md
