[package]
name = "bayesomatic"
version = "0.1.0"
authors = ["Victor Berger <victor.berger@m4x.org>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loopybayesnet = "0.1"
ndarray = "0.12"
stdweb = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.8"
pulldown-cmark = "0.5"
yew = "0.7"
failure = "0.1"