[package]
name = "bayesomatic"
version = "0.2.0"
authors = ["Victor Berger <victor.berger@m4x.org>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loopybayesnet = { git = "https://github.com/vberger/loopybayesnet.git" }
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
pulldown-cmark = "0.9"
reqwasm = "0.5"
yew = "0.19"
failure = "0.1"
fluent = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Document", "HtmlSelectElement", "HtmlTextAreaElement"] }
js-sys = "0.3"
weblog = "0.3"